# golangBoostTesting

./: .gitignore  CMakeLists.txt  README.md
data/: ecb.xml  fixer.json
src/: CMakeLists.txt  example.cpp  example.h
test/: CMakeLists.txt  exampleTest.cpp
